FIX name/quote overflow at small screen size

--- a/src/scss/abstracts/_breakpoints.scss
+++ b/src/scss/abstracts/_breakpoints.scss
@@ -1,5 +1,8 @@
 // Media queries breakpoints
 $breakpoints: (
+  "smaller": (
+    min-width: 380px,
+  ),
   "small": (
     min-width: 530px,
   ),
